--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,37 +88,25 @@ jobs:
       napiType: jsi
 
 # Ubuntu/Linux
-  - template: .github/jobs/linux.yml
-    parameters:
-      name: Ubuntu_Clang9_V8
-      vmImage: 'ubuntu-latest'
-      CC: clang-9
-      CXX: clang++-9
-      JSEngine: V8
+
+  # TODO: v8 is incompatible with curl for some reason
+  # See https://github.com/BabylonJS/BabylonNative/issues/1190
 
   - template: .github/jobs/linux.yml
     parameters:
-      name: Ubuntu_GCC9_JSC
+      name: Ubuntu_Clang_JavaScriptCore
       vmImage: 'ubuntu-latest'
-      CC: gcc-9
-      CXX: g++-9
+      CC: clang
+      CXX: clang++
       JSEngine: JavaScriptCore
 
   - template: .github/jobs/linux.yml
     parameters:
-      name: Ubuntu_GCC9_V8
+      name: Ubuntu_GCC_JavaScriptCore
       vmImage: 'ubuntu-latest'
-      CC: gcc-9
-      CXX: g++-9
-      JSEngine: V8
-
-  - template: .github/jobs/linux.yml
-    parameters:
-      name: Ubuntu_GCC10_V8
-      vmImage: 'ubuntu-latest'
-      CC: gcc-10
-      CXX: g++-10
-      JSEngine: V8
+      CC: gcc
+      CXX: g++
+      JSEngine: JavaScriptCore
 
 # Android
   - template: .github/jobs/android.yml
