--- a/Apps/ValidationTests/Scripts/config.json
+++ b/Apps/ValidationTests/Scripts/config.json
@@ -1,7 +1,7 @@
 {
     "root": "https://cdn.babylonjs.com",
     "tests": [
-	    {
+        {
             "reason": "https://github.com/BabylonJS/BabylonNative/issues/1111",
             "title": "Thin Instances",
             "playgroundId": "#V1JE4Z#1",
@@ -52,6 +52,11 @@
             "playgroundId": "#ZG0C8B#6",
             "renderCount": 10,
             "referenceImage": "nested_BBG.png"
+        },
+        {
+            "title": "Dynamic Texture context clip",
+            "playgroundId": "#FU0ES5#37",
+            "referenceImage": "dynamicTextureClip.png"
         },
         {
             "title": "GUI3D SpherePanel",
