--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -21,9 +21,9 @@ jobs:
         workingDir: 'Apps'
       displayName: 'Install Babylon.js NPM packages'
 
-    - template: cmake.yml
-      parameters:
-        vmImage: ${{ parameters.vmImage }}
+#    - template: cmake.yml
+#      parameters:
+#        vmImage: ${{ parameters.vmImage }}
 
     - script: |
         cd Apps/Playground/Android
