--- a/Apps/Playground/Android/app/build.gradle
+++ b/Apps/Playground/Android/app/build.gradle
@@ -81,7 +81,7 @@ android {
 
     externalNativeBuild {
         cmake {
-            version '3.25.2'
+            version '3.19.6+'
             path 'CMakeLists.txt'
         }
     }
