pick first for android VT .so

--- a/Apps/ValidationTests/Android/app/build.gradle
+++ b/Apps/ValidationTests/Android/app/build.gradle
@@ -79,6 +79,11 @@ android {
             path 'CMakeLists.txt'
         }
     }
+
+    packagingOptions {
+        pickFirst 'lib/*/libv8android.so'
+        pickFirst 'lib/*/libjsc.so'
+    }
 }
 
 dependencies {
