--- a/Apps/ValidationTests/Scripts/config.json
+++ b/Apps/ValidationTests/Scripts/config.json
@@ -4,14 +4,15 @@
         {
             "title": "GLTF Texture Linear Interpolation Test",
             "playgroundId": "#WGZLGJ#3009",
-            "referenceImage": "gltfTextureLinearInterpolation.png"
+            "referenceImage": "gltfTextureLinearInterpolation.png",
+            "renderCount": 10
         },
         {
             "title": "GLTF Extension KHR_materials_volume with attenuation",
             "playgroundId": "#YG3BBF#18",
             "referenceImage": "gltfExtensionKhrMaterialsVolumeAttenuation.png",
             "errorRatio": 1.2,
-            "renderCount": 5
+            "renderCount": 10
         },
         {
             "title": "GLTF ClearCoat",
