--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -29,8 +29,12 @@ set(V8JSI_VERSION "0.64.33")
 set(CPU_ARCH "x64")
 set(PLATFORM_FOLDER "win32")
 set(V8JSI_PACKAGE_PATH "${NUGET_PATH}/packages/ReactNative.V8Jsi.Windows.${V8JSI_VERSION}")
-set(V8JSI_LIB_PATH_RELEASE "${V8JSI_PACKAGE_PATH}/lib/${PLATFORM_FOLDER}/Release/${CPU_ARCH}/v8jsi.dll.lib")
+set(V8JSI_LIB_PATH_RELEASE "${V8JSI_PACKAGE_PATH}/lib/${PLATFORM_FOLDER}/Release/${CPU_ARCH}/")
 target_link_directories(TestInstall PRIVATE "${V8JSI_LIB_PATH_RELEASE}")
+
+if(NAPI_JAVASCRIPT_ENGINE STREQUAL "JSI")
+    set(EXTRA_LIBS "v8jsi.dll")
+endif()
 
 target_link_libraries(TestInstall PRIVATE 
     AppRuntime
@@ -80,5 +84,5 @@ target_link_libraries(TestInstall PRIVATE
     d3d12
     d3dcompiler
     Pathcch
-    v8jsi.dll
+    ${EXTRA_LIBS}
     )
