--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,15 @@
 cmake_minimum_required(VERSION 3.18)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+# CMakeExtensions
+include(FetchContent)
+FetchContent_Declare(cmake-extensions
+        GIT_REPOSITORY https://github.com/CedricGuillemet/CMakeExtensions.git
+        GIT_TAG f2f345bb30833711b1c817eb1d6b846e739173a7)
+set(cmake-extensions_SOURCE_DIR "${CMAKE_SOURCE_DIR}/Dependencies/CMakeExtensions")
+FetchContent_MakeAvailable(cmake-extensions)
+add_subdirectory(${cmake-extensions_SOURCE_DIR})
+
 project(BabylonNative)
 
 # --------------------------------------------------
