--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -6,3 +6,6 @@ endif()
 if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID))
     add_subdirectory(UnitTests)
 endif()
+
+# NPM install
+NPM(install)
