--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -7,25 +7,22 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: windows-latest
 
     steps:
     - name: Checkout
       uses: actions/checkout@master
       with:
         submodules: 'recursive'
-    - name: NPM Install
-      run: npm install
-      working-directory: ./Apps
-    - name: NPM download nightly
-      run: npm run getNightly
-      working-directory: ./Apps
     - name: View Apps\node_modules content
       run: Get-ChildItem -Path .\Apps\node_modules -Recurse
     - name: Make Solution
       run: mkdir buildWin32_x64 && 
         cd buildWin32_x64 &&
-        cmake -G "Visual Studio 16 2019" -A x64 -DBGFX_CONFIG_DEBUG=ON ..
+        cmake -A x64 -DBGFX_CONFIG_DEBUG=ON ..
+    - name: NPM download nightly
+      run: npm run getNightly
+      working-directory: ./Apps
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
     - name: Build Win32
