--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -8,4 +8,4 @@ if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID
 endif()
 
 # NPM install
-NPM(install)
+npm(install)
