CmakeExtensions sub repo (#1236)
- moved CMake extension into its own repo
- npm install done with CMake. no more need to run it in `Apps` folder

Note: CMake extension is here
https://github.com/CedricGuillemet/CMakeExtensions
I'll move it under Babylonjs org when this PR and new cmake repo are
approved.

--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -5,3 +5,6 @@ endif()
 if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID))
     add_subdirectory(UnitTests)
 endif()
+
+# NPM install
+npm(install)
