--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -144,3 +144,6 @@ endif()
 if(WINDOWS_STORE)
     add_subdirectory(WindowsAppSDK)
 endif()
+
+# --------------------------- NAPI Extensions ---------------------------
+add_subdirectory(napi-extensions)
