unity build disabled for PG and UT

--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -176,6 +176,7 @@ if(APPLE)
             RESOURCE "${RESOURCE_FILES}"
             FOLDER "Playground")
     endif()
+    set_property(TARGET Playground PROPERTY UNITY_BUILD false)
 endif()
 
 if(WINDOWS_STORE)
