--- a/Plugins/NativeInput/CMakeLists.txt
+++ b/Plugins/NativeInput/CMakeLists.txt
@@ -23,7 +23,10 @@ else()
 endif()
 
 add_library(NativeInput ${SOURCES})
-warnings_as_errors(NativeInput)
+# V8 and V8Inspector have unused parameters. Unable to set warning as error.
+if(NOT NAPI_JAVASCRIPT_ENGINE STREQUAL "V8")
+    warnings_as_errors(NativeInput)
+endif()
 
 target_include_directories(NativeInput PUBLIC "Include")
 
