--- a/Polyfills/Window/CMakeLists.txt
+++ b/Polyfills/Window/CMakeLists.txt
@@ -6,7 +6,10 @@ set(SOURCES
     "Source/Window.cpp")
 
 add_library(Window ${SOURCES})
-warnings_as_errors(Window)
+# V8 and V8Inspector have unused parameters. Unable to set warning as error.
+if(NOT NAPI_JAVASCRIPT_ENGINE STREQUAL "V8")
+    warnings_as_errors(Window)
+endif()
 
 target_include_directories(Window
     PUBLIC "Include")
