--- a/Plugins/NativeOptimizations/CMakeLists.txt
+++ b/Plugins/NativeOptimizations/CMakeLists.txt
@@ -3,7 +3,10 @@ set(SOURCES
     "Source/NativeOptimizations.cpp")
 
 add_library(NativeOptimizations ${SOURCES})
-warnings_as_errors(NativeOptimizations)
+# V8 and V8Inspector have unused parameters. Unable to set warning as error.
+if(NOT NAPI_JAVASCRIPT_ENGINE STREQUAL "V8")
+    warnings_as_errors(NativeOptimizations)
+endif()
 
 if(APPLE)
     set_target_properties(NativeOptimizations PROPERTIES
