--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ include(FetchContent)
 FetchContent_Declare(cmake-extensions
         GIT_REPOSITORY https://github.com/BabylonJS/CMakeExtensions.git
         GIT_TAG 17baf9e349afea90677e69cdd273d773c894f7b5)
-set(cmake-extensions_SOURCE_DIR "${CMAKE_SOURCE_DIR}/Dependencies/CMakeExtensions")
+message(STATUS "Fetching cmake-extensions")
 FetchContent_MakeAvailable(cmake-extensions)
+message(STATUS "Fetching cmake-extensions - done")
 
 project(BabylonNative)
 
