--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,12 @@ jobs:
       xCodeVersion: 14.2
       deploymentTarget: 16.2
 
+  - template: .github/jobs/ios.yml
+    parameters:
+      name: iOS_Xcode15beta-ios17
+      vmImage: 'macOS-latest'
+      xCodeVersion: 15.0
+      deploymentTarget: 17.0
 # WIN32
   - template: .github/jobs/win32.yml
     parameters:
